k8s/bases/apps/crossview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crossview
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
